[gd_scene load_steps=13 format=2]

[ext_resource path="res://Resources/UI/learning_Language.png" type="Texture" id=1]
[ext_resource path="res://Assets/Prefab/Main_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Prefab/Detail_Theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Prefab/Learning_Arabic_UI.gd" type="Script" id=4]
[ext_resource path="res://Assets/Prefab/Back Dia.gd" type="Script" id=5]
[ext_resource path="res://Resources/UI/learned_Languge.png" type="Texture" id=6]
[ext_resource path="res://Resources/UI/To_Learn_Language.png" type="Texture" id=7]
[ext_resource path="res://Assets/Prefab/Lock_UI.tscn" type="PackedScene" id=8]
[ext_resource path="res://Resources/UI/learned_Languge_Progress_100.png" type="Texture" id=9]
[ext_resource path="res://Resources/UI/learned_Languge_Progress_0.png" type="Texture" id=10]
[ext_resource path="res://Resources/Fonts/English_T.otf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 5
use_mipmaps = true
use_filter = true
extra_spacing_char = 10
font_data = ExtResource( 11 )

[node name="Learning" type="TextureRect"]
anchor_right = 0.981481
anchor_bottom = 0.340789
rect_min_size = Vector2( 1060, 777 )
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Lesson_Name" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchor_left = 0.435849
anchor_top = 0.540671
anchor_right = 0.964151
anchor_bottom = 0.991121
margin_top = 3.05176e-05
rect_min_size = Vector2( 560, 350 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Title" type="Label" parent="Lesson_Name"]
unique_name_in_owner = true
margin_right = 560.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Arabic Language"
valign = 1
autowrap = true

[node name="UnderLine" type="ColorRect" parent="Lesson_Name/Title"]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = 2.0
color = Color( 0.823529, 0.890196, 0.933333, 1 )

[node name="Details" type="Label" parent="Lesson_Name"]
unique_name_in_owner = true
margin_top = 221.0
margin_right = 560.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.82, 0.89, 0.93, 0.5 )
text = "Details"
autowrap = true

[node name="Back Dia" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_top = -0.00128708
anchor_right = 0.444
anchor_bottom = 1.0
margin_left = -3.05176e-05
margin_top = 1.00006
margin_right = -421.76
margin_bottom = -737.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 231, 388 )
texture = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}
Textures = [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 6 ) ]

[node name="Center" type="Control" parent="Back Dia"]
anchor_left = 0.065
anchor_top = 0.004
anchor_right = 0.93
anchor_bottom = 0.586
rect_rotation = -180.0
rect_pivot_offset = Vector2( 199.815, 226.107 )

[node name="Lock" parent="Back Dia/Center" instance=ExtResource( 8 )]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.5
margin_top = -87.5
margin_right = 91.5
margin_bottom = 87.5

[node name="Progress" type="TextureProgress" parent="Back Dia/Center"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = -200.0
margin_right = 177.0
margin_bottom = 200.0
max_value = 6.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 9 )
fill_mode = 4
radial_initial_angle = 270.0

[node name="Level" type="Label" parent="Back Dia/Center"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -96.0
margin_right = 87.0
margin_bottom = 96.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 87, 96 )
custom_colors/font_color = Color( 0.168627, 0.176471, 0.313726, 1 )
custom_colors/font_outline_modulate = Color( 0.168627, 0.176471, 0.313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "001"
align = 1
valign = 1

[node name="Btn" type="TextureButton" parent="Back Dia/Center"]
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="button_up" from="Back Dia/Center/Btn" to="." method="_on_Btn_up"]
